--- a/Notebooks/pyproject.toml
+++ b/Notebooks/pyproject.toml
@@ -4,7 +4,17 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "matplotlib>=3.10.1",
+    "pillow>=11.1.0",
+    "scikit-learn>=1.6.1",
+    "scipy>=1.15.2",
+    "seaborn>=0.13.2",
+    "tqdm>=4.67.1",
+    "jupyterlab>=4.4.0",
+    "tensorboard>=2.19.0",
+
+]
 
 [project.optional-dependencies]
 cu124 = ["torch==2.6.0", "torchvision==0.21.0"]
